create github pages

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">easy web creator</a></section><section class="header3 cid-qPIr1RQ1yn mbr-parallax-background" id="header3-9">
+<section class="engine"><a href="https://mobirise.ws/d">best free web software</a></section><section class="header3 cid-qPIr1RQ1yn mbr-parallax-background" id="header3-9">
 
     
 
@@ -175,7 +175,7 @@
             <div class="event-name align-left mbr-white ">
                 <h4 class="mbr-fonts-style display-5">GRADUATION IN:</h4>
             </div>
-            <div class="countdown align-center py-2" data-due-date="May 1, 2019">
+            <div class="countdown align-center py-2" data-due-date="2019/05/01">
             </div>
             <div class="daysCountdown" title="Days"></div>
             <div class="hoursCountdown" title="Hours"></div>
